--- a/hyperkitty/static/hyperkitty/less/hyperkitty-variables.less
+++ b/hyperkitty/static/hyperkitty/less/hyperkitty-variables.less
@@ -56,10 +56,3 @@
     text-align: center;
     font-weight: bold;
 }
-
-// for large monitors, use more whitespace
-@media (min-width: 1620px) {
-    .container {
-        width: 1580px;
-    }
-}
